--- a/rodolphe-web/pom.xml
+++ b/rodolphe-web/pom.xml
@@ -69,10 +69,17 @@
 			<version>${vertigo.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1102-jdbc41</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
 		<plugins>
+		
 			<plugin><!-- Copie des dÃ©pendances avant la gÃ©nÃ©ration. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
