--- a/rodolphe-web/src/main/webapp/WEB-INF/web.xml
+++ b/rodolphe-web/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,16 @@
     
     <context-param>
         <param-name>applicationConfiguration</param-name>
-        <param-value>/boot/components/foundation.xml;/boot/components/services.xml;/boot/components/webservices.xml</param-value>
+        <param-value>/boot/components/foundation.xml;/boot/components/db.xml;/boot/components/services.xml;/boot/components/webservices.xml</param-value>
     </context-param>
+	<context-param>
+		<param-name>boot.db.source</param-name>
+		<param-value>java:/comp/env/jdbc/DataSource</param-value>
+	</context-param>
+	<context-param>
+		<param-name>boot.db.classname</param-name>
+		<param-value>io.vertigo.dynamo.impl.database.vendor.postgresql.PostgreSqlDataBase</param-value>
+	</context-param>
     
     <listener>
         <listener-class>io.vertigo.vega.impl.rest.servlet.ApplicationServletContextListener</listener-class>
