update the model.

--- a/api/build-mda.properties
+++ b/api/build-mda.properties
@@ -1,6 +1,6 @@
 targetGenDir=src/main/javagen/
 project.packagepath=rodolphe/demo/
-spaDtDefinitionsGenDir=../rodolphe-spa/spa/app/config/entityDefinition
-spaDtLabelsGenDir=../rodolphe-spa/spa/app/i18n/generated
-sqlCrebasGenDir=src/main/bdd/scripts/installation
+spaDtDefinitionsGenDir=../ui/app/config/entityDefinition
+spaDtLabelsGenDir=../ui/app/i18n/generated
+sqlCrebasGenDir=src/main/database/scripts/installation
 sqlGen=sqlgen
