--- a/api/pom.xml
+++ b/api/pom.xml
@@ -95,6 +95,11 @@
 			<version>3.0.0.v201112011016</version>
 			<scope>provided</scope>
 		</dependency> 
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.4.2</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
