--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.vertigo</groupId>
-	<artifactId>rodolphe-demo</artifactId>
+	<groupId>rodolphe.demo</groupId>
+	<artifactId>rodolphedemo-api</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>rodolphe-demo</name>
+	<name>rodolphe-demo-api</name>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -156,4 +156,68 @@
 
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>Jenkins</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.17</version>
+						<configuration>
+							<forkCount>1</forkCount>
+							<excludes>
+								<exclude>**/AllTest*.java</exclude>
+								<exclude>**/Abstract*Test*.java</exclude>
+							</excludes>
+							<testFailureIgnore>true</testFailureIgnore>
+							<!-- Fichier de propriétés spécifique pour cruise control -->
+							<systemPropertyVariables>
+							<!--
+								<propertiesFile>jenkins.test.properties</propertiesFile>
+								-->
+								<propertiesFile>test.properties</propertiesFile>
+							</systemPropertyVariables>
+							<properties>
+								<property>
+									<name>listener</name>
+									<value>org.sonar.java.jacoco.JUnitListener</value>
+								</property>
+							</properties>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.7.1.201405082137</version>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>default-report</id>
+								<phase>test</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.codehaus.sonar-plugins.java</groupId>
+					<artifactId>sonar-jacoco-listeners</artifactId>
+					<version>2.4</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+	
 </project>
