--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,6 +16,8 @@
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<maven.test.error.ignore>true</maven.test.error.ignore>
 		<vertigo.version>0.7.3</vertigo.version>
+		<sonar.sources>src/main/java</sonar.sources>
+		<sonar.exclusions>src/main/java/io/**</sonar.exclusions>
 	</properties>
 
 	<dependencies>
