Adding new  elasticseach index for movie's genres.

--- a/api/src/main/resources/boot/elasticsearch.yml
+++ b/api/src/main/resources/boot/elasticsearch.yml
@@ -10,10 +10,16 @@ index :
                     sep_virgule :
                            tokenizer : sep_virgule
                            filter : [standard]
+                    sep_pipe :
+                           tokenizer : sep_pipe
+                           filter : [standard]
              tokenizer :
                     keyword :
                            type : keyword
                     sep_virgule :
                            type : pattern
                            pattern : '([,]+)'
+                    sep_pipe :
+                           type : pattern
+                           pattern : '([\|]+)'
                            
