Initialize the spa application.

--- a/ui/package.json
+++ b/ui/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "appcache": "0.0.4",
     "clean-css-brunch": "^1.7.1",
+    "css-brunch": "^1.7.0",
+    "focus": "https://github.com/KleeGroup/focus/tarball/master",
+    "focus-components": "https://github.com/KleeGroup/focus-components/tarball/master",
+    "less-brunch": "^1.8.1",
     "react": "^0.12.2",
-    "uglify": "^0.1.1",
-	"focus": "https://github.com/KleeGroup/focus/tarball/master",
-	"focus-components": "https://github.com/KleeGroup/focus-components/tarball/master"
-
+    "sass-brunch": "^1.8.9",
+    "uglify": "^0.1.1"
   },
   "main": "index.js",
   "directories": {
