Ajout de l'id d'un film dans l'url

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ ui/.npmrc
 *.oob
 ui/public/*
 api/src/main/webapp/static/img
+api/src/main/webapp/static/javascripts/app.js
+api/src/main/webapp/static/javascripts/vendor.js
