--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Klee Group",
-  "name": "nantissement",
+  "name": "rodolphe-demo",
   "description": "front-end-spa",
   "version": "0.0.1",
   "homepage": "",
@@ -15,18 +15,18 @@
   "scripts": {
     "start": "brunch watch --server",
     "test": "brunch test",
+    "watch": "./node_modules/brunch/bin/brunch w",
+    "serve": "./node_modules/brunch/bin/brunch w -s",
     "api": "node ./example/api/server.js",
     "doc": "docco app/lib/* app/models/* app/views/* README.md"
   },
   "dependencies": {
-    "appcache": "0.0.4",
-    "clean-css-brunch": "^1.7.1",
-    "css-brunch": "^1.7.0",
-    "javascript-brunch": "^1.7.1",
-    "less-brunch": "^1.8.1",
-    "react": "^0.12.2",
-    "sass-brunch": "^1.8.9",
-    "uglify": "^0.1.1"
+    "bootstrap": "^3.3.4",
+    "bootstrap-material": "^0.1.5",
+    "i18next": "^1.7.10",
+    "immutable": "^3.7.1",
+    "lodash": "^3.6.0",
+    "react": "^0.13.1"
   },
   "main": "index.js",
   "directories": {
@@ -35,10 +35,15 @@
   "license": "MIT",
   "devDependencies": {
     "brunch": "^1.7.20",
+    "appcache": "0.0.4",
+    "clean-css-brunch": "^1.7.1",
+    "css-brunch": "^1.7.0",
+    "less-brunch": "^1.8.1",
     "eslint": "^0.17.1",
     "javascript-brunch": "^1.7.1",
     "react-brunch": "^1.0.7",
-    "sass-brunch": "^1.8.9"
+    "sass-brunch": "^1.8.9",
+    "uglify": "^0.1.1"
   },
   "private": true
 }
