--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,8 @@
     "i18next": "^1.7.10",
     "immutable": "^3.7.1",
     "lodash": "^3.6.0",
-    "react": "^0.13.1"
+    "react": "^0.13.1",
+    "sass-brunch": "^1.8.10"
   },
   "main": "index.js",
   "directories": {
@@ -42,7 +43,7 @@
     "eslint": "^0.17.1",
     "javascript-brunch": "^1.7.1",
     "react-brunch": "^1.0.7",
-    "sass-brunch": "^1.8.9",
+    "sass-brunch": "^1.8.10",
     "uglify": "^0.1.1"
   },
   "private": true
