--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "bootstrap": "^3.3.4",
     "bootstrap-material": "^0.1.5",
+    "focusjs": "^0.6.0",
+    "focusjs-components": "^0.1.4",
     "i18next": "^1.7.10",
     "immutable": "^3.7.1",
     "lodash": "^3.6.0",
@@ -35,13 +37,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "brunch": "^1.7.20",
     "appcache": "0.0.4",
+    "brunch": "^1.8.2",
     "clean-css-brunch": "^1.7.1",
     "css-brunch": "^1.7.0",
-    "less-brunch": "^1.8.1",
     "eslint": "^0.17.1",
     "javascript-brunch": "^1.7.1",
+    "less-brunch": "^1.8.1",
     "react-brunch": "^1.0.7",
     "sass-brunch": "^1.8.10",
     "uglify": "^0.1.1"
