--- a/ui/package.json
+++ b/ui/package.json
@@ -35,12 +35,13 @@
   "devDependencies": {
     "appcache": "0.0.4",
     "brunch": "^1.8.2",
+    "babel-brunch": "^5.1.2",
     "clean-css-brunch": "^1.7.1",
     "css-brunch": "^1.7.0",
     "eslint": "^0.17.1",
     "javascript-brunch": "^1.7.1",
     "less-brunch": "^1.8.1",
-    "react-brunch": "^1.0.7",
+    "react-brunch": "^1.0.9",
     "sass-brunch": "^1.8.10",
     "uglify": "^0.1.1"
   },
