--- a/api/src/test/resources/test.properties
+++ b/api/src/test/resources/test.properties
@@ -1,7 +1,15 @@
 boot.db.type=io.vertigo.dynamo.impl.database.vendor.postgresql.PostgreSqlDataBase
-boot.db.driver=org.postgresql.Driver
 boot.applicationConfiguration=/boot/components/core-test.xml;/boot/components/foundation.xml;/boot/components/db-test.xml;/boot/components/search-distant.xml;/boot/components/services.xml;/boot/components/webservices.xml
 #boot.applicationConfiguration=/boot/components/core-test.xml;/boot/components/foundation.xml;/boot/components/db-test.xml;/boot/components/search-embedded.xml;/boot/components/services.xml;/boot/components/webservices.xml
 
 # database 
+#Postgres
+boot.db.driver=org.postgresql.Driver
 boot.db.url=jdbc:postgresql://miura.part.klee.lan.net:5432/rodolphedev?user=rodolphedev&password=rodolphedev
+
+#H2
+#boot.db.driver=org.h2.Driver
+#base en mode embedded. Ne doit pas être ouvert par une autre VM
+#boot.db.url=jdbc:h2:~/test;MODE=PostgreSQL;user=sa
+#Accès à une base en mode serveur (ouvert par une autre VM)
+#boot.db.url=jdbc:h2:tcp://localhost/~/test;MODE=PostgreSQL;user=sa
