--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "backbone": "^1.2.0",
+    "bootstrap": "^3.3.4",
     "focusjs": "^0.6.0",
     "focusjs-components": "^0.1.4",
     "immutable": "^3.7.2",
