--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "immutable": "^3.7.2",
     "jquery": "^2.1.4",
     "lodash": "^3.8.0",
+    "moment": "^2.10.3",
     "react": "^0.13.1"
   },
   "main": "index.js",
