--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "backbone": "^1.2.0",
     "bootstrap": "^3.3.4",
+    "bootstrap-material": "^0.1.5",
     "focusjs": "^0.6.0",
     "focusjs-components": "^0.1.4",
     "immutable": "^3.7.2",
