--- a/ui/package.json
+++ b/ui/package.json
@@ -32,7 +32,8 @@
     "jquery": "^2.1.4",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
-    "react": "^0.13.1"
+    "react": "^0.13.1",
+    "showdown": "^1.0.2"
   },
   "main": "index.js",
   "directories": {
