--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -44,13 +44,28 @@
       }
     ],
     "quotes": [2, "single"],
-    "eqeqeq": 0,
-    "strict": 0,
+    "eqeqeq": 1,
+    "strict": 1,
     "yoda": "always",
     "camelcase": 1,
-    "no-underscore-dangle": 0,
-    "block-scoped-var": 1,
-    "new-cap": 0,
-    "block-scoped-var": 0
+    "no-underscore-dangle": 1,
+    "new-cap": 1,
+    "react/display-name": 1,
+    "react/jsx-boolean-value": 1,
+    "react/jsx-quotes": 1,
+    "react/jsx-no-undef": 1,
+    "react/jsx-sort-props": 1,
+    "react/jsx-sort-prop-types": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 1,
+    "react/no-unknown-property": 1,
+    "react/prop-types": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1,
+    "comma-dangle": 1
   }
 }
