Add static server skeleton

--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.7.9"
+    "express": "^4.12.4",
+    "lodash": "^3.9.3"
   }
 }
