--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "jquery": "^2.1.4",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
+    "native-promise-only": "^0.8.0-a",
     "numeral": "^1.5.3",
     "react": "^0.13.1",
     "showdown": "^1.0.2"
