--- a/api/pom.xml
+++ b/api/pom.xml
@@ -111,7 +111,13 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>1.4.5</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-expressions</artifactId>
+			<version>4.10.4</version>
+		</dependency>
+			
 	</dependencies>
 
 	<build>
