--- a/ui/package.json
+++ b/ui/package.json
@@ -43,11 +43,12 @@
   "license": "MIT",
   "devDependencies": {
     "appcache": "0.0.4",
-    "brunch": "^1.8.3",
     "babel-brunch": "^5.1.2",
+    "brunch": "^1.8.3",
     "clean-css-brunch": "^1.7.1",
     "css-brunch": "^1.7.0",
     "eslint": "^0.17.1",
+    "eslint-plugin-react": "^2.5.2",
     "javascript-brunch": "^1.7.1",
     "less-brunch": "^1.8.1",
     "react-brunch": "^1.0.9",
