[eslint] Add FocusComponents as a global

--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -27,6 +27,7 @@
     "jQuery": false,
     "$": true,
     "Focus": true,
+    "FocusComponents": true,
     "require": true,
     "Backbone": true,
     "React": true,
